--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,7 +1,46 @@
 @import "./base.css";
 
+@font-face {
+    font-family: "SF UI Text";
+    font-weight: 400;
+    font-display: auto;
+    unicode-range: U+000-5FF;
+    src: url(../../public/fonts/SFUIText.ttf);
+}
+@font-face {
+    font-family: "SF UI Text";
+    font-weight: 500;
+    font-display: auto;
+    font-style: normal;
+    unicode-range: U+000-5FF;
+    src: url(../../public/fonts/SFUIText-Semibold.ttf);
+}
+@font-face {
+    font-family: "SF Pro Display";
+    font-weight: 400;
+    font-display: auto;
+    font-style: normal;
+    unicode-range: U+000-5FF;
+    src: url(../../public/fonts/SFProDisplay-Regular.ttf);
+}
+@font-face {
+    font-family: "SF Pro Display";
+    font-weight: 500;
+    font-display: auto;
+    font-style: normal;
+    unicode-range: U+000-5FF;
+    src: url(../../public/fonts/SFProDisplay-Medium.ttf);
+}
+@font-face {
+    font-family: "SF Pro Display";
+    font-weight: 600;
+    font-display: auto;
+    font-style: normal;
+    unicode-range: U+000-5FF;
+    src: url(../../public/fonts/SFProDisplay-Semibold.ttf);
+}
+
 #app {
-    max-width: 1280px;
     margin: 0 auto;
 }
 
